<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">菜鸟商店</string>
    <string name="leak_canary_display_activity_label">CNiaoShops</string>
    <string name="buy_now">立即购买</string>
    <string name="tab_home">首页</string>
    <string name="tab_hot">热卖</string>
    <string name="tab_classification">分类</string>
    <string name="tab_shopping_cart">购物车</string>
    <string name="tab_me">我的</string>
    <string name="network_connect_fail">网络连接失败</string>
    <string name="no_more">暂无更多数据</string>
    <string name="no_to_more">没有更多数据</string>
    <string name="load_fail">加载失败</string>
    <string name="please_waiting">请稍等...</string>
    <string name="loading">努力加载中...</string>
    <string name="please_connect_network">请连接网络，点击屏幕尝试连接</string>
    <string name="all_select">全选</string>
    <string name="go_settlement">去结算</string>
    <string name="add_shopping_cart_success">加入购物车成功</string>
    <string name="delete">删除</string>
    <string name="please_input_search_content">请输入搜索内容</string>
    <string name="edit">编辑</string>
    <string name="complete">完成</string>
    <string name="total">合计：￥ %s</string>
    <string name="wares_list">商品列表</string>
    <string name="grid">网格</string>
    <string name="defualt">默认</string>
    <string name="price">价格</string>
    <string name="sales_volume">销量</string>
    <string name="list">列表</string>
    <string name="swipe_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_complete">刷新成功</string>
    <string name="swipe_to_load_more">上拉加载更多</string>
    <string name="release_to_load_more">释放立刻加载</string>
    <string name="loading_more">正在加载更多...</string>
    <string name="wares_detail">商品详情</string>
    <string name="operate">操作</string>
    <string name="share">分享</string>
    <string name="click_login">点击登录</string>
    <string name="user_login">用户登录</string>
    <string name="mobile_number">手机号码</string>
    <string name="login_password">登录密码</string>
    <string name="login">登录</string>
    <string name="register_account">注册帐号</string>
    <string name="forget_password">忘记密码</string>
    <string name="user_register">用户注册</string>
    <string name="confirm_password">确认密码</string>
    <string name="register">注册</string>
    <string name="username_moblie_phone_email">用户名/手机号码/邮箱</string>
    <string name="username">用户名</string>
    <string name="email">邮箱</string>

    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_login_pwd">请输入登录密码</string>
    <string name="please_input_confirm_pwd">请输入确认密码</string>
    <string name="pwd_inconsistency">密码不一致</string>
    <string name="register_success">注册成功</string>
    <string name="username_or_pwd_incoreect">用户名或密码错误</string>
    <string name="personal_data">个人资料</string>
    <string name="personal_avatar">个人头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="account_settings">帐号设置</string>
    <string name="mobile_phone">手机</string>
    <string name="password">密码</string>
    <string name="system_settings">系统设置</string>
    <string name="logout">登出</string>
    <string name="application_cache">应用缓存</string>
    <string name="username_already_exists">用户名已存在</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="picture">图片</string>
    <string name="moblie_phone">手机号码</string>
    <string name="code">验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="please_input_moblie_phone">请输入手机号码</string>
    <string name="moblie_phone_send_message_limited">该手机号码发送短信达到限制</string>
    <string name="other_login_mode">其他登录方式</string>
    <string name="user_information">用户信息</string>
    <string name="app_name_qq">QQ</string>
    <string name="app_name_sinaweibo">SinaWeibo</string>
    <string name="no_remaining_sdk_sms_number_for_send_messages">该手机号码无可用的发送短信条数</string>
    <string name="create_order">创建订单</string>
    <string name="wechat">微信</string>
    <string name="alipay">支付宝</string>
    <string name="payment_mode">支付方式</string>
    <string name="submit_order">提交订单</string>
    <string name="delivery_address">收货地址</string>
    <string name="payment">支付</string>
    <string name="add">添加</string>
    <string name="add_address">添加地址</string>
    <string name="consignee">收货人</string>
    <string name="please_input_consignee_name">请输入收件人的姓名</string>
    <string name="please_input_consignee_number">请输入收件人的手机号码</string>
    <string name="select_area">选择地区</string>
    <string name="hint_area">xx省xx市xx区</string>
    <string name="detail_address">详细地址</string>
    <string name="hint_address">xx街xx号</string>
    <string name="select_location">选择位置</string>
    <string name="search">搜索</string>
    <string name="please_input_keyword">请输入关键字</string>
    <string name="set_as_default">设为默认</string>
    <string name="modify_address">修改地址</string>
    <string name="please_fill_in_the_receiving_address">请填写收货地址</string>
    <string name="whole">全部</string>
    <string name="unpaid">待支付</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="my_order">我的订单</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
