<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_base_address"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.chhd.cniaoshops.ui.activity.address.BaseAddressActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout style="@style/AddressAddItem">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/consignee"
                android:textColor="@color/def_text_black"
                android:textSize="@dimen/text_size_normal" />

            <EditText
                android:id="@+id/et_consignee"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/please_input_consignee_name"
                android:singleLine="true"
                android:textColor="@color/def_text_mid"
                android:textSize="@dimen/text_size_normal">

            </EditText>

        </LinearLayout>

        <LinearLayout
            style="@style/AddressAddItem"
            android:layout_marginTop="2dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"
                android:textColor="@color/def_text_black"
                android:textSize="@dimen/text_size_normal" />

            <EditText
                android:id="@+id/et_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/please_input_consignee_number"
                android:inputType="numberSigned"
                android:singleLine="true"
                android:textColor="@color/def_text_mid"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>

        <LinearLayout
            style="@style/AddressAddItem"
            android:layout_marginTop="2dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/select_area"
                android:textColor="@color/def_text_black"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_area"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/hint_area"
                android:textColor="@color/def_text_mid"
                android:textSize="@dimen/text_size_normal" />

            <ImageView
                android:id="@+id/iv_loc"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="@dimen/margin_normal"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@mipmap/ic_loc" />

        </LinearLayout>

        <LinearLayout
            style="@style/AddressAddItem"
            android:layout_marginTop="2dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/detail_address"
                android:textColor="@color/def_text_black"
                android:textSize="@dimen/text_size_normal" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/hint_address"
                android:singleLine="true"
                android:textColor="@color/def_text_mid"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
