<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.chhd.cniaoshops.ui.activity.LoginActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_account"
                style="@style/MaterialEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/username_moblie_phone_email"
                android:singleLine="true"
                app:met_iconLeft="@drawable/ic_account_circle_black_24dp">

                <requestFocus />
            </com.rengwuxian.materialedittext.MaterialEditText>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_pwd"
                style="@style/MaterialEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                app:met_iconLeft="@drawable/ic_lock_outline_black_24dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            style="?attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selecter_btn_style_red"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/register_account"
                android:textColor="@color/def_text_mid"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"

                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/forget_password"
                android:textColor="@color/def_text_mid"
                android:textSize="@dimen/text_size_normal" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="#333" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_big"
                android:layout_marginRight="@dimen/margin_big"
                android:text="@string/other_login_mode"
                android:textColor="@color/def_text_mid"
                android:textSize="@dimen/text_size_normal" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="#333" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_qq"
                style="@style/AppStyle"
                android:src="@mipmap/app_qq"
                android:tag="@string/app_name_qq" />

            <ImageView
                android:id="@+id/iv_weibo"
                style="@style/AppStyle"
                android:layout_marginLeft="30dp"
                android:src="@mipmap/app_weibo"
                android:tag="@string/app_name_sinaweibo"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
