<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.chhd.cniaoshops.ui.fragment.RegByNameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_username"
            style="@style/MaterialEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/username"
            app:met_iconLeft="@drawable/ic_perm_identity_black_24dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_pwd"
            style="@style/MaterialEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            app:met_iconLeft="@drawable/ic_lock_outline_black_24dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_confirm_pwd"
            style="@style/MaterialEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:met_iconLeft="@drawable/ic_lock_outline_black_24dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        style="?attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selecter_btn_style_red"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal" />

</LinearLayout>
