<?xml version="1.0" encoding="utf-8"?>
<com.github.ksoichiro.android.observablescrollview.ObservableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/parallax_image_height"
            android:scaleType="centerCrop"
            android:src="@mipmap/bg_zoom_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                style="@style/UserDataHeader"
                android:text="@string/personal_data" />

            <LinearLayout
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_touch"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_big"
                android:paddingRight="@dimen/padding_big">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/personal_avatar"
                    android:textColor="@color/def_background_black"
                    android:textSize="@dimen/text_size_normal" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@mipmap/ic_user" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginLeft="@dimen/margin_big"
                    android:src="@mipmap/ic_left_gray" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nickname"
                style="@style/UserDataItem">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nickname"
                    android:textColor="@color/def_background_black"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:id="@+id/tv_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="用户太吊名字无法显示"
                    android:textColor="@color/def_text_mid" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginLeft="@dimen/margin_big"
                    android:src="@mipmap/ic_left_gray" />

            </LinearLayout>

            <LinearLayout style="@style/UserDataItem">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender"
                    android:textColor="@color/def_background_black"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="男"
                    android:textColor="@color/def_text_mid" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginLeft="@dimen/margin_big"
                    android:src="@mipmap/ic_left_gray" />

            </LinearLayout>

            <TextView
                style="@style/UserDataHeader"
                android:text="@string/account_settings" />

            <LinearLayout style="@style/UserDataItem">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mobile_phone"
                    android:textColor="@color/def_background_black"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/def_text_mid" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginLeft="@dimen/margin_big"
                    android:src="@mipmap/ic_left_gray"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout style="@style/UserDataItem">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/password"
                    android:textColor="@color/def_background_black"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="***"
                    android:textColor="@color/def_text_mid" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginLeft="@dimen/margin_big"
                    android:src="@mipmap/ic_left_gray"
                    android:visibility="visible" />

            </LinearLayout>


            <TextView
                style="@style/UserDataHeader"
                android:text="@string/system_settings" />

            <LinearLayout style="@style/UserDataItem">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/application_cache"
                    android:textColor="@color/def_background_black"
                    android:textSize="@dimen/text_size_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.00KB"
                    android:textColor="@color/def_text_mid" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginLeft="@dimen/margin_big"
                    android:src="@mipmap/ic_left_gray"
                    android:visibility="visible" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_logout"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/selecter_btn_style_red"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>

    </LinearLayout>

</com.github.ksoichiro.android.observablescrollview.ObservableScrollView>